--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+It's old repo and it's never will be added into original repo because differntces between this repo and original is enormous.
+I recomend use Vagrant or other virtual machine with Ubintu 16.04 for building of images.
+I added my Vagrant config for it.
+
+Original README
 Buildroot is a simple, efficient and easy-to-use tool to generate embedded
 Linux systems through cross-compilation.
 
